[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/sprites/robotLeg.png" type="Texture" id=1]
[ext_resource path="res://components/RobotLegs.gd" type="Script" id=2]

[node name="RobotLegs" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( 2, 1 )
texture = ExtResource( 1 )
offset = Vector2( 1.5, 3.5 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -3, 1 )
texture = ExtResource( 1 )
offset = Vector2( 1.5, 3.5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
